<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_tituloTela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/novo_cadastro"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="etNomeRegister" android:hint="@string/nome_do_cadastro"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCellphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="Celular do cadastro" android:hint="@string/celular_do_cadastro"
        android:inputType="phone" />

    <Button
        android:id="@+id/bt_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/bt_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar" />

</LinearLayout>